--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "bot",
     "version": "1.0.0",
-    "description": "Discord bot for our community",
+    "description": "CzechedSubstance's discord bot",
     "main": "index.js",
     "scripts": {
-        "start": "NODE_PATH=dist node dist",
+        "start": "ts-node src/index.ts",
         "dev": "tsc --watch",
         "lint": "eslint .",
         "prettier:check": "prettier --check .",
@@ -24,13 +24,19 @@
     "homepage": "https://github.com/Czeched-Substance/bot#readme",
     "devDependencies": {
         "@tsconfig/node16": "^1.0.2",
+        "@types/node": "^17.0.18",
         "@typescript-eslint/eslint-plugin": "^5.7.0",
         "@typescript-eslint/parser": "^5.7.0",
         "eslint": "^8.5.0",
         "prettier": "^2.5.1",
+        "ts-node": "^10.5.0",
         "typescript": "^4.5.4"
     },
     "dependencies": {
+        "@discordjs/builders": "^0.12.0",
+        "@discordjs/rest": "^0.3.0",
+        "discord-api-types": "^0.27.2",
+        "discord.js": "^13.6.0",
         "dotenv": "^10.0.0",
         "env-var": "^7.1.1"
     }
