--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -10,6 +10,11 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="3.6.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
+      <PackageReference Include="SimpleInjector.Integration.GenericHost" Version="5.3.0" />
+      <PackageReference Include="YamlDotNet" Version="11.2.1" />
     </ItemGroup>
 
 </Project>
